fixed footer for account,login,singup and watchlist (made line invisible)

--- a/css/account.css
+++ b/css/account.css
@@ -128,6 +128,11 @@ p {
 
 /*account content end*/
 
+footer {
+  background-color: transparent;
+  padding: 0;
+}
+
 html,
 body {
   height: 100%;
