--- a/css/log-in.css
+++ b/css/log-in.css
@@ -83,3 +83,7 @@ body {
   width: 100%;
   padding-bottom: 1rem;
 }
+footer {
+  background-color: transparent;
+  padding: 0;
+}
