--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -94,3 +94,8 @@ body {
   width: 100%;
   padding-bottom: 1rem;
 }
+
+footer {
+  background-color: transparent;
+  padding: 0;
+}
