--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -15,3 +15,8 @@ body {
   width: 100%;
   padding-bottom: 1rem;
 }
+
+footer {
+  background-color: transparent;
+  padding: 0;
+}
